# smart-study-buddy

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py
app/agents/: __init__.py  explainer.py  flashcard.py  quiz.py
app/api/: __init__.py  main.py
app/core/: __init__.py  analytics.py  cache.py  config.py  db_pool.py  i18n.py  llm.py  retry.py
app/static/: index.html
app/tests/: test_analytics.py  test_phase3.py  test_quiz.py  test_retry.py
