[project]
name = "study-buddy"
version = "1.0.0"
description = "Smart Study Buddy — multi-agent AI pipeline powered by nexus-a2a"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nexus-a2a>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "anthropic>=0.20.0",
    "google-genai>=2.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = []
